package me.study.designpattern.factorymethod.q1.framework;

public abstract class Product {
    public abstract void use();
}
